--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">PopularMovieUdacity</string>
+    <string name="error_message">Something Wrong!</string>
+    <string name="img_desc_backdrop">Image backdrop</string>
+    <string name="img_desc_poster">Image description</string>
 </resources>
