--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="error_message">Something Wrong!</string>
     <string name="img_desc_backdrop">Image backdrop</string>
     <string name="img_desc_poster">Image description</string>
+    <string name="menu_sort_movie">Sort movie</string>
 </resources>
